include/pitaya.h

typedef struct pc_client_s pc_client_t;
typedef struct pc_request_s pc_request_t;
typedef int (*pc_local_storage_cb_t)(pc_local_storage_op_t op,
        char* data, size_t* len, void* ex_data);
/**
 * Binary buffer
 */
typedef struct {
    uint8_t *base;
    int64_t  len;
} pc_buf_t;
typedef struct {
    int conn_timeout;

    int enable_reconn;
    int reconn_max_retry;
    int reconn_delay;
    int reconn_delay_max;
    int reconn_exp_backoff;

    int enable_polling;

    pc_local_storage_cb_t local_storage_cb;
    void* ls_ex_data;

    int transport_name;
    
    int disable_compression;
} pc_client_config_t;
/**
 * pc_lib_init and pc_lib_cleanup both should be invoked only once.
 */
typedef struct {
    const char *platform;
    const char *build_number;
    const char *version;
} pc_lib_client_info_t;
PC_EXPORT void pc_lib_init(void (*pc_log)(int level, const char* msg), 
                           void* (*pc_alloc)(size_t), 
                           void (*pc_free)(void* ), 
                           void* (*pc_realloc)(void*, size_t), 
                           pc_lib_client_info_t client_info);
    
PC_EXPORT void pc_update_client_info(pc_lib_client_info_t client_info);
/**
 * Pins a public key globally for all clients.
 */
PC_EXPORT int pc_lib_add_pinned_public_key_from_certificate_string(const char *ca_string);
PC_EXPORT int pc_lib_add_pinned_public_key_from_certificate_file(const char *ca_path);
PC_EXPORT void pc_lib_skip_key_pin_check(bool should_skip);
    
/**
 * Remote all pinned public keys.
 */
PC_EXPORT void pc_lib_clear_pinned_public_keys(void);
PC_EXPORT void pc_lib_cleanup(void);
typedef struct {
    pc_client_t *client;
    int rc;
} pc_client_init_result_t;
PC_EXPORT size_t pc_client_size(void);
PC_EXPORT pc_client_init_result_t pc_client_init(void* ex_data, const pc_client_config_t* config);
PC_EXPORT int pc_client_connect(pc_client_t* client, const char* host, int port, const char* handshake_opts);
PC_EXPORT int pc_client_disconnect(pc_client_t* client);
PC_EXPORT int pc_client_cleanup(pc_client_t* client);
PC_EXPORT int pc_client_poll(pc_client_t* client);
/**
 * pc_client_t getters
 */
PC_EXPORT void* pc_client_ex_data(const pc_client_t* client);
PC_EXPORT const pc_client_config_t* pc_client_config(const pc_client_t* client);
PC_EXPORT int pc_client_state(pc_client_t* client);
PC_EXPORT int pc_client_conn_quality(pc_client_t* client);
PC_EXPORT void* pc_client_trans_data(pc_client_t* client);
PC_EXPORT const char *pc_client_serializer(pc_client_t *client);
// Free serializer
PC_EXPORT void pc_client_free_serializer(const char *serializer);
/**
 * Event
 */

/**
 * event handler callback and event types
 *
 * arg1 and arg2 are significant for the following events:
 *   PC_EV_USER_DEFINED_PUSH - arg1 as push route, arg2 as push msg
 *   PC_EV_CONNECT_ERROR - arg1 as short error description
 *   PC_EV_CONNECT_FAILED - arg1 as short reason description
 *   PC_EV_UNEXPECTED_DISCONNECT - arg1 as short reason description
 *   PC_EV_PROTO_ERROR - arg1 as short reason description
 *   PC_EV_RECONNECT_FAILED - arg1 as short reason description
 *
 * For other events, arg1 and arg2 will be set to NULL.
 */
typedef void (*pc_event_cb_t)(pc_client_t *client, int ev_type, void* ex_data,
                              const char* arg1, const char* arg2);
#define PC_EV_USER_DEFINED_PUSH 0
#define PC_EV_CONNECTED 1
#define PC_EV_CONNECT_ERROR 2
#define PC_EV_CONNECT_FAILED 3
#define PC_EV_DISCONNECT 4
#define PC_EV_KICKED_BY_SERVER 5
#define PC_EV_UNEXPECTED_DISCONNECT 6
#define PC_EV_PROTO_ERROR 7
#define PC_EV_RECONNECT_FAILED 8
#define PC_EV_RECONNECT_STARTED 9
#define PC_EV_COUNT 10
#define PC_EV_INVALID_HANDLER_ID -1
PC_EXPORT int pc_client_add_ev_handler(pc_client_t* client, pc_event_cb_t cb,
        void* ex_data, void (*destructor)(void* ex_data));
PC_EXPORT int pc_client_rm_ev_handler(pc_client_t* client, int id);
/**
 * Error
 */
typedef struct {
    int code;
    pc_buf_t payload;
    int uv_code;
} pc_error_t;
/**
 * Request
 */

typedef void (*pc_request_success_cb_t)(const pc_request_t* req, const pc_buf_t *resp);
typedef void (*pc_request_error_cb_t)(const pc_request_t* req, const pc_error_t *error);
/**
 * pc_request_t getters.
 *
 * All the getters should be called in pc_request_cb_t to access read-only
 * properties of the current pc_request_t.
 *
 * User should not hold any references to pc_request_t.
 */
PC_EXPORT pc_client_t* pc_request_client(const pc_request_t* req);
PC_EXPORT const char* pc_request_route(const pc_request_t* req);
PC_EXPORT const char* pc_request_msg(const pc_request_t* req);
PC_EXPORT int pc_request_timeout(const pc_request_t* req);
PC_EXPORT void* pc_request_ex_data(const pc_request_t* req);
/**
 * Initiate a request.
 */
PC_EXPORT int pc_string_request_with_timeout(pc_client_t* client, const char* route,
                                             const char *str, void* ex_data, int timeout, 
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);