java/PitayaClient/src/main/java/dog/tale/pitaya/Pitaya.java

public static class Pc_alloc_long extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    Pc_alloc_long(Pointer p) { super(p); }
    protected Pc_alloc_long() { allocate(); }
    private native void allocate();
    public native Pointer call(@Cast("size_t") long arg0);
}
public static class Pc_free_Pointer extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    Pc_free_Pointer(Pointer p) { super(p); }
    protected Pc_free_Pointer() { allocate(); }
    private native void allocate();
    public native void call(Pointer arg0 );
}
public static class Pc_realloc_Pointer_long extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    Pc_realloc_Pointer_long(Pointer p) { super(p); }
    protected Pc_realloc_Pointer_long() { allocate(); }
    private native void allocate();
    public native Pointer call(Pointer arg0, @Cast("size_t") long arg1);
}
@NoException public static native void pc_lib_init(Pc_log_int_BytePointer pc_log,
                           Pc_alloc_long pc_alloc,
                           Pc_free_Pointer pc_free,
                           Pc_realloc_Pointer_long pc_realloc,
                           @ByVal pc_lib_client_info_t client_info);
public static class Pc_log_int_String extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    Pc_log_int_String(Pointer p) { super(p); }
    protected Pc_log_int_String() { allocate(); }
    private native void allocate();
    public native void call(int level, String msg);
}
@NoException public static native void pc_lib_init(Pc_log_int_String pc_log,
                           Pc_alloc_long pc_alloc,
                           Pc_free_Pointer pc_free,
                           Pc_realloc_Pointer_long pc_realloc,
                           @ByVal pc_lib_client_info_t client_info);

@NoException public static native void pc_update_client_info(@ByVal pc_lib_client_info_t client_info);

/**
 * Pins a public key globally for all clients.
 */
@NoException public static native int pc_lib_add_pinned_public_key_from_certificate_string(@Cast("const char*") BytePointer ca_string);
@NoException public static native int pc_lib_add_pinned_public_key_from_certificate_string(String ca_string);
@NoException public static native int pc_lib_add_pinned_public_key_from_certificate_file(@Cast("const char*") BytePointer ca_path);
@NoException public static native int pc_lib_add_pinned_public_key_from_certificate_file(String ca_path);
@NoException public static native void pc_lib_skip_key_pin_check(@Cast("bool") boolean should_skip);

/**
 * Remote all pinned public keys.
 */
@NoException public static native void pc_lib_clear_pinned_public_keys();

@NoException public static native void pc_lib_cleanup();

public static class pc_client_init_result_t extends Pointer {
    static { Loader.load(); }
    /** Default native constructor. */
    public pc_client_init_result_t() { super((Pointer)null); allocate(); }
    /** Native array allocator. Access with {@link Pointer#position(long)}. */
    public pc_client_init_result_t(long size) { super((Pointer)null); allocateArray(size); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public pc_client_init_result_t(Pointer p) { super(p); }
    private native void allocate();
    private native void allocateArray(long size);
    @Override public pc_client_init_result_t position(long position) {
        return (pc_client_init_result_t)super.position(position);
    }

    public native pc_client_t client(); public native pc_client_init_result_t client(pc_client_t client);
    public native int rc(); public native pc_client_init_result_t rc(int rc);
}

@NoException public static native @Cast("size_t") long pc_client_size();
@NoException public static native @ByVal pc_client_init_result_t pc_client_init(Pointer ex_data, @Const pc_client_config_t config);
@NoException public static native int pc_client_connect(pc_client_t client, @Cast("const char*") BytePointer host, int port, @Cast("const char*") BytePointer handshake_opts);
@NoException public static native int pc_client_connect(pc_client_t client, String host, int port, String handshake_opts);
@NoException public static native int pc_client_disconnect(pc_client_t client);
@NoException public static native int pc_client_cleanup(pc_client_t client);
@NoException public static native int pc_client_poll(pc_client_t client);

/**
 * pc_client_t getters
 */
@NoException public static native Pointer pc_client_ex_data(@Const pc_client_t client);
@NoException public static native @Const pc_client_config_t pc_client_config(@Const pc_client_t client);
@NoException public static native int pc_client_state(pc_client_t client);
@NoException public static native int pc_client_conn_quality(pc_client_t client);
@NoException public static native Pointer pc_client_trans_data(pc_client_t client);
@NoException public static native @Cast("const char*") BytePointer pc_client_serializer(pc_client_t client);

// Free serializer
@NoException public static native void pc_client_free_serializer(@Cast("const char*") BytePointer serializer);
@NoException public static native void pc_client_free_serializer(String serializer);

/**
 * Event
 */

/**
 * event handler callback and event types
 *
 * arg1 and arg2 are significant for the following events:
 *   PC_EV_USER_DEFINED_PUSH - arg1 as push route, arg2 as push msg
 *   PC_EV_CONNECT_ERROR - arg1 as short error description
 *   PC_EV_CONNECT_FAILED - arg1 as short reason description
 *   PC_EV_UNEXPECTED_DISCONNECT - arg1 as short reason description
 *   PC_EV_PROTO_ERROR - arg1 as short reason description
 *   PC_EV_RECONNECT_FAILED - arg1 as short reason description
 *
 * For other events, arg1 and arg2 will be set to NULL.
 */
public static class pc_event_cb_t extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    pc_event_cb_t(Pointer p) { super(p); }
    protected pc_event_cb_t() { allocate(); }
    private native void allocate();
    public native void call(pc_client_t client, int ev_type, Pointer ex_data,
                              @Cast("const char*") BytePointer arg1, @Cast("const char*") BytePointer arg2);
}

public static final int PC_EV_USER_DEFINED_PUSH = 0;
public static final int PC_EV_CONNECTED = 1;
public static final int PC_EV_CONNECT_ERROR = 2;
public static final int PC_EV_CONNECT_FAILED = 3;
public static final int PC_EV_DISCONNECT = 4;
public static final int PC_EV_KICKED_BY_SERVER = 5;
public static final int PC_EV_UNEXPECTED_DISCONNECT = 6;
public static final int PC_EV_PROTO_ERROR = 7;
public static final int PC_EV_RECONNECT_FAILED = 8;
public static final int PC_EV_RECONNECT_STARTED = 9;
public static final int PC_EV_COUNT = 10;

public static final int PC_EV_INVALID_HANDLER_ID = -1;

public static class Destructor_Pointer extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    Destructor_Pointer(Pointer p) { super(p); }
    protected Destructor_Pointer() { allocate(); }
    private native void allocate();
    public native void call(Pointer ex_data);
}
@NoException public static native int pc_client_add_ev_handler(pc_client_t client, pc_event_cb_t cb,
        Pointer ex_data, Destructor_Pointer destructor);
@NoException public static native int pc_client_rm_ev_handler(pc_client_t client, int id);

/**
 * Error
 */
public static class pc_error_t extends Pointer {
    static { Loader.load(); }
    /** Default native constructor. */
    public pc_error_t() { super((Pointer)null); allocate(); }
    /** Native array allocator. Access with {@link Pointer#position(long)}. */
    public pc_error_t(long size) { super((Pointer)null); allocateArray(size); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public pc_error_t(Pointer p) { super(p); }
    private native void allocate();
    private native void allocateArray(long size);
    @Override public pc_error_t position(long position) {
        return (pc_error_t)super.position(position);
    }

    public native int code(); public native pc_error_t code(int code);
    public native @ByRef pc_buf_t payload(); public native pc_error_t payload(pc_buf_t payload);
    public native int uv_code(); public native pc_error_t uv_code(int uv_code);
}

/**
 * Request
 */

public static class pc_request_success_cb_t extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    pc_request_success_cb_t(Pointer p) { super(p); }
    protected pc_request_success_cb_t() { allocate(); }
    private native void allocate();
    public native void call(@Const pc_request_t req, @Const pc_buf_t resp);
}
public static class pc_request_error_cb_t extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    pc_request_error_cb_t(Pointer p) { super(p); }
    protected pc_request_error_cb_t() { allocate(); }
    private native void allocate();
    public native void call(@Const pc_request_t req, @Const pc_error_t error);
}

/**
 * pc_request_t getters.
 *
 * All the getters should be called in pc_request_cb_t to access read-only
 * properties of the current pc_request_t.
 *
 * User should not hold any references to pc_request_t.
 */
@NoException public static native pc_client_t pc_request_client(@Const pc_request_t req);
@NoException public static native @Cast("const char*") BytePointer pc_request_route(@Const pc_request_t req);
@NoException public static native @Cast("const char*") BytePointer pc_request_msg(@Const pc_request_t req);
@NoException public static native int pc_request_timeout(@Const pc_request_t req);
@NoException public static native Pointer pc_request_ex_data(@Const pc_request_t req);

/**
 * Initiate a request.
 */
@NoException public static native int pc_string_request_with_timeout(pc_client_t client, @Cast("const char*") BytePointer route,
                                             @Cast("const char*") BytePointer str, Pointer ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);
@NoException public static native int pc_string_request_with_timeout(pc_client_t client, String route,
                                             String str, Pointer ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);
